<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Salud">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/txtAltura"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/txtPeso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="164dp"
        android:layout_height="103dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso">

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMujer" />

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbHombre" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:text="@string/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:text="@string/btnLimpiar"
        app:layout_constraintStart_toEndOf="@+id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="208dp"
        android:layout_height="107dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img02" />

</androidx.constraintlayout.widget.ConstraintLayout>