<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSalud"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="140dp"
        android:text="@string/btnSalud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculadora"
        android:onClick="Salud"/>

    <Button
        android:id="@+id/btnCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="100dp"
        android:onClick="Calculadora"
        android:text="@string/btnCalculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSalud"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculadora"
        android:onClick="Salir"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img03" />
</androidx.constraintlayout.widget.ConstraintLayout>